--- a/scss/style.scss
+++ b/scss/style.scss
@@ -77,7 +77,7 @@ body {
             display: flex;
             justify-content: space-between;
             align-items: center;
-            gap: 0 24px;
+            // gap: 0 24px;
             text-align: left;
             width: 100%;
             font-weight: 600;
