--- a/scss/style.scss
+++ b/scss/style.scss
@@ -46,6 +46,7 @@ body {
 // Accordion
 .accordion {
     padding-top: 168px;
+    padding-bottom: 120px;
     &__container {
         max-width: 648px;
         padding: 0 24px;
